feat: add golgg tournament source index